--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.0.0-beta.2"
+    "dotenv": "^16.4.5",
+    "express": "^5.0.0-beta.2",
+    "jsforce": "^1.11.1"
   }
 }
