--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^5.0.0-beta.2",
-    "jsforce": "^1.11.1"
+    "express": "^5.0.0-beta.2"
   }
 }
