--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^5.0.0-beta.2",
-    "jsforce": "^1.11.1"
+    "jsforce": "^1.11.1",
+    "node-localstorage": "^3.0.5"
   }
 }
